<resources>
    <string name="app_name">Application-Cinema</string>
    <string name="hello">Hello</string>
    <string name="enter_email">Enter your email address</string>
    <string name="email">Email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="password">Mot de passe</string>
    <string name="validate">Se connecter</string>
    <string name="login">Connexion</string>
    <string name="register">Register</string>
    <string name="unlock">Unlock door</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="lock_accesses">Lock Accesses</string>
    <string name="tap_to_unlock">Tap to unlock</string>
    <string name="addLock">Add lock access</string>
    <string name="macAddress">MAC address</string>
    <string name="ipAddress">Local IP address</string>
    <string name="location">Description/location</string>
    <string name="create_account">Create account</string>
    <string name="lock_password">Enter lock password</string>
    <string name="unlock_door">Unlock door</string>
    <string name="logs">Logs list</string>
    <string name="show_logs">Show logs list</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="films">Films</string>
    <string name="actors">Acteurs</string>
    <string name="characters">Personnages</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="menu">Menu Cinema</string>
    <string name="add_actor">Ajouter acteur</string>
    <string name="birth_date">Date de naissance</string>
    <string name="death_date">Date de décès</string>
    <string name="pick_bd">Choisir date de naissance</string>
    <string name="unselected_date">Date non sélectionnée</string>
    <string name="pick_dd">Choisir date de décès</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
</resources>
